src/test/ui/async-await/unresolved_type_param.stderr
error[E0698]: type inside `async fn` body must be known in this context
  --> $DIR/unresolved_type_param.rs:9:5
   |
LL |     bar().await;
   |     ^^^ cannot infer type for type parameter `T` declared on the function `bar`
   |
note: the type is part of the `async fn` body because of this `await`
  --> $DIR/unresolved_type_param.rs:9:10
   |
LL |     bar().await;
   |          ^^^^^^

error[E0698]: type inside `async fn` body must be known in this context
  --> $DIR/unresolved_type_param.rs:9:5
   |
LL |     bar().await;
   |     ^^^ cannot infer type for type parameter `T` declared on the function `bar`
   |
note: the type is part of the `async fn` body because of this `await`
  --> $DIR/unresolved_type_param.rs:9:10
   |
LL |     bar().await;
   |          ^^^^^^

error[E0698]: type inside `async fn` body must be known in this context
  --> $DIR/unresolved_type_param.rs:9:5
   |
LL |     bar().await;
   |     ^^^ cannot infer type for type parameter `T` declared on the function `bar`
   |
note: the type is part of the `async fn` body because of this `await`
  --> $DIR/unresolved_type_param.rs:9:10
   |
LL |     bar().await;
   |          ^^^^^^

error[E0698]: type inside `async fn` body must be known in this context
  --> $DIR/unresolved_type_param.rs:9:5
   |
LL |     bar().await;
   |     ^^^ cannot infer type for type parameter `T` declared on the function `bar`
   |
note: the type is part of the `async fn` body because of this `await`
  --> $DIR/unresolved_type_param.rs:9:10
   |
LL |     bar().await;
   |          ^^^^^^

error[E0698]: type inside `async fn` body must be known in this context
  --> $DIR/unresolved_type_param.rs:9:5
   |
LL |     bar().await;
   |     ^^^ cannot infer type for type parameter `T` declared on the function `bar`
   |
note: the type is part of the `async fn` body because of this `await`
  --> $DIR/unresolved_type_param.rs:9:10
   |
LL |     bar().await;
   |          ^^^^^^

error: aborting due to 5 previous errors

For more information about this error, try `rustc --explain E0698`.
